--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set (CMAKE_CXX_STANDARD 17)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-include_directories(${CMAKE_INCLUDE_PATH} include)
+include_directories(${CMAKE_INCLUDE_PATH} ECS/include)
 
 #set source files
 file(GLOB SOURCES "src/*.cpp")
